build: update to Nx 15.4

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@angular/platform-browser-dynamic": "15.0.0",
     "@angular/platform-server": "15.0.0",
     "@angular/router": "15.0.0",
-    "@nrwl/angular": "15.3.0",
+    "@nrwl/angular": "15.4.1",
     "rxjs": "7.5.7",
     "tslib": "^2.4.0",
     "zone.js": "~0.11.8"
@@ -62,13 +62,13 @@
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@ngtools/webpack": "~15.0.0",
-    "@nrwl/cli": "15.3.0",
-    "@nrwl/cypress": "15.3.0",
-    "@nrwl/eslint-plugin-nx": "15.3.0",
-    "@nrwl/jest": "15.3.0",
-    "@nrwl/linter": "15.3.0",
-    "@nrwl/vite": "15.3.0",
-    "@nrwl/workspace": "15.3.0",
+    "@nrwl/cli": "15.4.1",
+    "@nrwl/cypress": "15.4.1",
+    "@nrwl/eslint-plugin-nx": "15.4.1",
+    "@nrwl/jest": "15.4.1",
+    "@nrwl/linter": "15.4.1",
+    "@nrwl/vite": "15.4.1",
+    "@nrwl/workspace": "15.4.1",
     "@nx-plus/docusaurus": "15.0.0-rc.0",
     "@swc/helpers": "^0.4.13",
     "@types/jest": "29.1.2",
@@ -91,7 +91,7 @@
     "minimist": "^1.2.7",
     "ng-packagr": "15.0.0",
     "nitropack": "^0.6.1",
-    "nx": "15.3.0",
+    "nx": "15.4.1",
     "playwright": "^1.27.1",
     "postcss": "^8.4.5",
     "postcss-import": "~14.1.0",
@@ -104,8 +104,8 @@
     "ts-jest": "29.0.3",
     "ts-node": "10.9.1",
     "typescript": "4.8.4",
-    "vite": "^3.2.3",
-    "vitest": "^0.25.1",
+    "vite": "4.0.3",
+    "vitest": "0.25.8",
     "webpack-bundle-analyzer": "^4.6.1"
   }
 }
