--- a/packages/create-analog/template-angular-v15/package.json
+++ b/packages/create-analog/template-angular-v15/package.json
@@ -32,7 +32,7 @@
     "@angular-devkit/build-angular": "^15.0.0",
     "@angular/cli": "~15.0.0",
     "@angular/compiler-cli": "^15.0.0",
-    "@nrwl/vite": "^15.4.0",
+    "@nrwl/vite": "~15.3.0",
     "jsdom": "^20.0.0",
     "typescript": "~4.8.4",
     "vite": "^4.0.3",
