chore: update github templates

--- a/.github/ISSUE_TEMPLATE/01-bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/01-bug-report.yml
@@ -27,6 +27,7 @@ body:
         - vite-plugin-angular
         - astro-angular
         - router
+        - platform
         - Docs
         - Don't know / Other
     validations:
