--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@types/jest": "29.1.2",
     "@types/marked": "^4.0.8",
     "@types/node": "18.8.4",
+    "@types/prismjs": "^1.26.0",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
     "all-contributors-cli": "^6.24.0",
@@ -100,6 +101,7 @@
     "postcss-preset-env": "~7.5.0",
     "postcss-url": "~10.1.3",
     "prettier": "^2.7.1",
+    "prismjs": "^1.29.0",
     "prompts": "^2.4.2",
     "rollup-plugin-visualizer": "^5.8.2",
     "start-server-and-test": "^1.14.0",
