--- a/angular.json
+++ b/angular.json
@@ -9,6 +9,7 @@
     "astro-app": "apps/astro-app",
     "astro-app-e2e-playwright": "apps/astro-app-e2e-playwright",
     "blog-app": "apps/blog-app",
+    "content": "packages/content",
     "create-analog": "packages/create-analog",
     "docs-app": "apps/docs-app",
     "platform": "packages/platform",
