--- a/packages/content/package.json
+++ b/packages/content/package.json
@@ -1,9 +1,30 @@
 {
   "name": "@analogjs/content",
   "version": "0.0.1",
+  "description": "Content Rendering for Analog",
+  "author": "Brandon Roberts <robertsbt@gmail.com>",
+  "keywords": [
+    "angular",
+    "markdown",
+    "meta-framework"
+  ],
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/analogjs/analog/issues"
+  },
+  "homepage": "https://analogjs.org",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/analogjs/analog.git"
+  },
   "peerDependencies": {
     "@angular/common": "^15.0.0",
-    "@angular/core": "^15.0.0"
+    "@angular/core": "^15.0.0",
+    "@angular/platform-browser": "^15.0.0",
+    "@angular/router": "^15.0.0",
+    "rxjs": "^6.5.0 || ^7.5.0",
+    "marked": "^4.2.4",
+    "prismjs": "^1.29.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
