--- a/packages/content/.eslintrc.json
+++ b/packages/content/.eslintrc.json
@@ -9,7 +9,7 @@
           "error",
           {
             "type": "attribute",
-            "prefix": "analogjs",
+            "prefix": "analog",
             "style": "camelCase"
           }
         ],
@@ -17,7 +17,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "analogjs",
+            "prefix": "analog",
             "style": "kebab-case"
           }
         ]
