--- a/angular.json
+++ b/angular.json
@@ -8,10 +8,13 @@
     "astro-angular": "packages/astro-angular",
     "astro-app": "apps/astro-app",
     "astro-app-e2e-playwright": "apps/astro-app-e2e-playwright",
+    "blog-app": "apps/blog-app",
+    "content": "packages/content",
     "create-analog": "packages/create-analog",
     "docs-app": "apps/docs-app",
     "platform": "packages/platform",
     "router": "packages/router",
     "vite-plugin-angular": "packages/vite-plugin-angular"
-  }
+  },
+  "defaultProject": "analog-app"
 }
