--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@angular/platform-server": "15.0.0",
     "@angular/router": "15.0.0",
     "@nrwl/angular": "15.4.1",
+    "marked": "^4.2.4",
     "rxjs": "7.5.7",
     "tslib": "^2.4.0",
     "zone.js": "~0.11.8"
@@ -72,7 +73,9 @@
     "@nx-plus/docusaurus": "15.0.0-rc.0",
     "@swc/helpers": "^0.4.13",
     "@types/jest": "29.1.2",
+    "@types/marked": "^4.0.8",
     "@types/node": "18.8.4",
+    "@types/prismjs": "^1.26.0",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
     "all-contributors-cli": "^6.24.0",
@@ -89,7 +92,7 @@
     "kolorist": "^1.6.0",
     "lint-staged": "^13.0.3",
     "minimist": "^1.2.7",
-    "ng-packagr": "15.0.0",
+    "ng-packagr": "~15.0.0",
     "nitropack": "^0.6.1",
     "nx": "15.4.1",
     "playwright": "^1.27.1",
@@ -98,6 +101,7 @@
     "postcss-preset-env": "~7.5.0",
     "postcss-url": "~10.1.3",
     "prettier": "^2.7.1",
+    "prismjs": "^1.29.0",
     "prompts": "^2.4.2",
     "rollup-plugin-visualizer": "^5.8.2",
     "start-server-and-test": "^1.14.0",
