feat(content): add support for front-matter in routes using markdown files
Add support for front-matter in routes that
use markdown files by first passing the content
passed to the MarkdownContentRenderer through
front-matter to extract any possible attributes.

Closes #198

--- a/packages/content/project.json
+++ b/packages/content/project.json
@@ -30,6 +30,9 @@
           "packages/content/**/*.html"
         ]
       }
+    },
+    "test": {
+      "executor": "@nrwl/vite:test"
     }
   },
   "tags": []
