--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@angular/router": "15.0.0",
     "@nrwl/angular": "15.4.1",
     "marked": "^4.2.4",
+    "front-matter": "^4.0.2",
     "rxjs": "7.5.7",
     "tslib": "^2.4.0",
     "zone.js": "~0.11.8"
