--- a/packages/content/package.json
+++ b/packages/content/package.json
@@ -24,7 +24,8 @@
     "@angular/router": "^15.0.0",
     "rxjs": "^6.5.0 || ^7.5.0",
     "marked": "^4.2.4",
-    "prismjs": "^1.29.0"
+    "prismjs": "^1.29.0",
+    "front-matter": "^4.0.2"
   },
   "dependencies": {
     "tslib": "^2.3.0"
