build: update deps to Angular 15.1.0, Nx 15.4.5

--- a/package.json
+++ b/package.json
@@ -36,16 +36,17 @@
     "apps/docs-app"
   ],
   "dependencies": {
-    "@angular/animations": "15.0.0",
-    "@angular/common": "15.0.0",
-    "@angular/compiler": "15.0.0",
-    "@angular/core": "15.0.0",
-    "@angular/forms": "15.0.0",
-    "@angular/platform-browser": "15.0.0",
-    "@angular/platform-browser-dynamic": "15.0.0",
-    "@angular/platform-server": "15.0.0",
-    "@angular/router": "15.0.0",
-    "@nrwl/angular": "15.4.1",
+    "@analogjs/content": "*",
+    "@angular/animations": "15.1.0",
+    "@angular/common": "15.1.0",
+    "@angular/compiler": "15.1.0",
+    "@angular/core": "15.1.0",
+    "@angular/forms": "15.1.0",
+    "@angular/platform-browser": "15.1.0",
+    "@angular/platform-browser-dynamic": "15.1.0",
+    "@angular/platform-server": "15.1.0",
+    "@angular/router": "15.1.0",
+    "@nrwl/angular": "15.4.5",
     "marked": "^4.2.4",
     "front-matter": "^4.0.2",
     "rxjs": "7.5.7",
@@ -53,24 +54,24 @@
     "zone.js": "~0.11.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "15.0.0",
-    "@angular-eslint/eslint-plugin": "15.0.0",
-    "@angular-eslint/eslint-plugin-template": "15.0.0",
-    "@angular-eslint/template-parser": "15.0.0",
-    "@angular/cli": "~15.0.0",
-    "@angular/compiler-cli": "15.0.0",
-    "@angular/language-service": "15.0.0",
+    "@angular-devkit/build-angular": "15.1.0",
+    "@angular-eslint/eslint-plugin": "15.1.0",
+    "@angular-eslint/eslint-plugin-template": "15.1.0",
+    "@angular-eslint/template-parser": "15.1.0",
+    "@angular/cli": "~15.1.0",
+    "@angular/compiler-cli": "15.1.0",
+    "@angular/language-service": "15.1.0",
     "@astrojs/markdown-component": "^1.0.1",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
-    "@ngtools/webpack": "~15.0.0",
-    "@nrwl/cli": "15.4.1",
-    "@nrwl/cypress": "15.4.1",
-    "@nrwl/eslint-plugin-nx": "15.4.1",
-    "@nrwl/jest": "15.4.1",
-    "@nrwl/linter": "15.4.1",
-    "@nrwl/vite": "15.4.1",
-    "@nrwl/workspace": "15.4.1",
+    "@ngtools/webpack": "~15.1.0",
+    "@nrwl/cli": "15.4.5",
+    "@nrwl/cypress": "15.4.5",
+    "@nrwl/eslint-plugin-nx": "15.4.5",
+    "@nrwl/jest": "15.4.5",
+    "@nrwl/linter": "15.4.5",
+    "@nrwl/vite": "15.4.5",
+    "@nrwl/workspace": "15.4.5",
     "@nx-plus/docusaurus": "15.0.0-rc.0",
     "@swc/helpers": "^0.4.13",
     "@types/jest": "29.1.2",
@@ -93,9 +94,9 @@
     "kolorist": "^1.6.0",
     "lint-staged": "^13.0.3",
     "minimist": "^1.2.7",
-    "ng-packagr": "~15.0.0",
+    "ng-packagr": "~15.1.0",
     "nitropack": "^0.6.1",
-    "nx": "15.4.1",
+    "nx": "15.4.5",
     "playwright": "^1.27.1",
     "postcss": "^8.4.5",
     "postcss-import": "~14.1.0",
