chore: add content to github templates

--- a/.github/ISSUE_TEMPLATE/01-bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/01-bug-report.yml
@@ -28,6 +28,7 @@ body:
         - astro-angular
         - router
         - platform
+        - content
         - Docs
         - Don't know / Other
     validations:
