--- a/.github/ISSUE_TEMPLATE/02-feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/02-feature-request.yml
@@ -19,6 +19,7 @@ body:
         - astro-angular
         - router
         - platform
+        - content
         - Docs
         - Don't known / other
     validations:
