--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "nx serve",
     "build": "nx run-many --target build --all",
     "build:vite-ci": "npm run build -- --exclude analog-app,docs-app",
-    "test:vite-ci": "npm run test",
+    "test:vite-ci": "npm run test -- --exclude create-analog",
     "e2e": "nx run-many --target e2e --all --parallel=1 --exclude analog-app-e2e-playwright",
     "test": "nx run-many --target test --all",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
