--- a/packages/vite-plugin-angular/project.json
+++ b/packages/vite-plugin-angular/project.json
@@ -11,7 +11,8 @@
         "outputPath": "node_modules/@analogjs/vite-plugin-angular",
         "main": "packages/vite-plugin-angular/src/index.ts",
         "tsConfig": "packages/vite-plugin-angular/tsconfig.lib.json",
-        "assets": ["packages/vite-plugin-angular/*.md"]
+        "assets": ["packages/vite-plugin-angular/*.md"],
+        "updateBuildableProjectDepsInPackageJson": false
       }
     },
     "test": {
