--- a/packages/content/project.json
+++ b/packages/content/project.json
@@ -4,6 +4,7 @@
   "projectType": "library",
   "sourceRoot": "packages/content/src",
   "prefix": "analogjs",
+  "implicitDependencies": ["vite-plugin-angular"],
   "targets": {
     "build": {
       "executor": "@nrwl/angular:package",
@@ -33,6 +34,7 @@
       }
     },
     "test": {
+      "dependsOn": ["^build"],
       "executor": "@nrwl/vite:test"
     }
   },
