--- a/apps/docs-app/package.json
+++ b/apps/docs-app/package.json
@@ -11,16 +11,30 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@docusaurus/core": "2.0.1",
-    "@docusaurus/preset-classic": "2.0.1",
+    "@docusaurus/core": "2.2.0",
+    "@docusaurus/preset-classic": "2.2.0",
     "@mdx-js/react": "1.6.22",
     "clsx": "1.2.1",
     "prism-react-renderer": "1.3.5",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.0.1"
+    "@docusaurus/module-type-aliases": "2.2.0"
+  },
+  "overrides": {
+    "@docusaurus/core": {
+      "react": "$react",
+      "react-dom": "$react-dom"
+    },
+    "@docusaurus/preset-classic": {
+      "react": "$react",
+      "react-dom": "$react-dom"
+    },
+    "@mdx-js/react": {
+      "react": "$react",
+      "react-dom": "$react-dom"
+    }
   },
   "browserslist": {
     "production": [
