--- a/packages/astro-angular/project.json
+++ b/packages/astro-angular/project.json
@@ -6,12 +6,16 @@
   "targets": {
     "build": {
       "executor": "@nrwl/js:tsc",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "node_modules/@analogjs/astro-angular",
         "main": "packages/astro-angular/src/index.ts",
         "tsConfig": "packages/astro-angular/tsconfig.lib.json",
-        "assets": ["packages/astro-angular/*.md"],
+        "assets": [
+          "packages/astro-angular/*.md"
+        ],
         "updateBuildableProjectDepsInPackageJson": false
       }
     },
@@ -29,13 +33,24 @@
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
-        "lintFilePatterns": ["packages/astro-angular/**/*.ts"]
+        "lintFilePatterns": [
+          "packages/astro-angular/**/*.ts"
+        ]
       }
     },
     "test": {
       "executor": "@nrwl/vite:test"
+    },
+    "version": {
+      "executor": "@jscutlery/semver:version",
+      "options": {
+        "preset": "conventional",
+        "tagPrefix": "astro-angular@"
+      }
     }
   },
   "tags": []
