--- a/packages/content/project.json
+++ b/packages/content/project.json
@@ -4,11 +4,15 @@
   "projectType": "library",
   "sourceRoot": "packages/content/src",
   "prefix": "analogjs",
-  "implicitDependencies": ["vite-plugin-angular"],
+  "implicitDependencies": [
+    "vite-plugin-angular"
+  ],
   "targets": {
     "build": {
       "executor": "@nrwl/angular:package",
-      "outputs": ["node_modules/@analogjs/content"],
+      "outputs": [
+        "node_modules/@analogjs/content"
+      ],
       "options": {
         "project": "packages/content/ng-package.json",
         "updateBuildableProjectDepsInPackageJson": false
@@ -25,7 +29,9 @@
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
         "lintFilePatterns": [
           "packages/content/**/*.ts",
@@ -34,8 +40,17 @@
       }
     },
     "test": {
-      "dependsOn": ["^build"],
+      "dependsOn": [
+        "^build"
+      ],
       "executor": "@nrwl/vite:test"
+    },
+    "version": {
+      "executor": "@jscutlery/semver:version",
+      "options": {
+        "preset": "conventional",
+        "tagPrefix": "content@"
+      }
     }
   },
   "tags": []
