--- a/packages/vite-plugin-angular/project.json
+++ b/packages/vite-plugin-angular/project.json
@@ -6,17 +6,28 @@
   "targets": {
     "build": {
       "executor": "@nrwl/js:tsc",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "node_modules/@analogjs/vite-plugin-angular",
         "main": "packages/vite-plugin-angular/src/index.ts",
         "tsConfig": "packages/vite-plugin-angular/tsconfig.lib.json",
-        "assets": ["packages/vite-plugin-angular/*.md"],
+        "assets": [
+          "packages/vite-plugin-angular/*.md"
+        ],
         "updateBuildableProjectDepsInPackageJson": false
       }
     },
     "test": {
       "executor": "@nrwl/vite:test"
+    },
+    "version": {
+      "executor": "@jscutlery/semver:version",
+      "options": {
+        "preset": "conventional",
+        "tagPrefix": "vite-plugin-angular@"
+      }
     }
   },
   "tags": []
