chore: add React component to astro-app to ensure compatibility

--- a/apps/astro-app/tsconfig.app.json
+++ b/apps/astro-app/tsconfig.app.json
@@ -29,5 +29,5 @@
     "strictTemplates": true
   },
   "files": [],
-  "include": ["./src/**/*.ts"]
+  "include": ["./src/**/*.ts", "./src/**/*.tsx"]
 }
