--- a/package.json
+++ b/package.json
@@ -46,9 +46,14 @@
     "@angular/platform-browser-dynamic": "15.1.2",
     "@angular/platform-server": "15.1.2",
     "@angular/router": "15.1.2",
+    "@astrojs/react": "^2.0.2",
     "@nrwl/angular": "15.6.3",
-    "marked": "^4.2.12",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
     "front-matter": "^4.0.2",
+    "marked": "^4.2.12",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "rxjs": "7.5.7",
     "tslib": "^2.4.0",
     "zone.js": "~0.11.8"
