test: add config to be able to use component from libs and use it in analog-app
To ensure there is compatibility of Analog being used within an Nx
workspace, the analog-app project in this repository
is updated to use a library.
This includes installing vite-tsconfig-paths and updating the analog-apps
vite.config.ts with the plugin and setting the root to the workspace root.
This allows vite to pick up the workspace tsconfig.base.json, which
includes the necessary mapping of the import url to the lib.

Closes #259

--- a/angular.json
+++ b/angular.json
@@ -14,6 +14,7 @@
     "docs-app": "apps/docs-app",
     "platform": "packages/platform",
     "router": "packages/router",
+    "top-bar": "libs/top-bar",
     "vite-plugin-angular": "packages/vite-plugin-angular"
   },
   "defaultProject": "analog-app"
