--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "ts-node": "10.9.1",
     "typescript": "4.9.4",
     "vite": "4.0.4",
+    "vite-tsconfig-paths": "4.0.5",
     "vitest": "0.25.8",
     "webpack-bundle-analyzer": "^4.7.0"
   }
