--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,6 +19,7 @@
       "@analogjs/content": ["packages/content/src/index.ts"],
       "@analogjs/platform": ["packages/platform/src/index.ts"],
       "@analogjs/router": ["packages/router/src/index.ts"],
+      "@analogjs/top-bar": ["libs/top-bar/src/index.ts"],
       "@analogjs/vite-plugin-angular": [
         "packages/vite-plugin-angular/src/index.ts"
       ]
