--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@angular/platform-server": "15.1.2",
     "@angular/router": "15.1.2",
     "@astrojs/react": "^2.0.2",
-    "@nrwl/angular": "15.6.3",
+    "@nrwl/angular": "15.7.0",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "front-matter": "^4.0.2",
@@ -60,6 +60,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "15.1.3",
+    "@angular-devkit/core": "~15.1.3",
+    "@angular-devkit/schematics": "~15.1.3",
     "@angular-eslint/eslint-plugin": "15.2.0",
     "@angular-eslint/eslint-plugin-template": "15.2.0",
     "@angular-eslint/template-parser": "15.2.0",
@@ -70,14 +72,15 @@
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
     "@ngtools/webpack": "~15.1.3",
-    "@nrwl/cli": "15.6.3",
-    "@nrwl/cypress": "15.6.3",
-    "@nrwl/eslint-plugin-nx": "15.6.3",
-    "@nrwl/jest": "15.6.3",
-    "@nrwl/linter": "15.6.3",
-    "@nrwl/vite": "15.6.3",
-    "@nrwl/workspace": "15.6.3",
+    "@nrwl/cli": "15.7.0",
+    "@nrwl/cypress": "15.7.0",
+    "@nrwl/eslint-plugin-nx": "15.7.0",
+    "@nrwl/jest": "15.7.0",
+    "@nrwl/linter": "15.7.0",
+    "@nrwl/vite": "15.7.0",
+    "@nrwl/workspace": "15.7.0",
     "@nx-plus/docusaurus": "15.0.0-rc.0",
+    "@schematics/angular": "~15.1.3",
     "@swc/helpers": "^0.4.14",
     "@types/jest": "29.4.0",
     "@types/marked": "^4.0.8",
@@ -101,7 +104,7 @@
     "minimist": "^1.2.7",
     "ng-packagr": "~15.1.1",
     "nitropack": "^1.0.0",
-    "nx": "15.6.3",
+    "nx": "15.7.0",
     "playwright": "^1.30.0",
     "postcss": "^8.4.21",
     "postcss-import": "~15.1.0",
