--- a/packages/create-analog/template-angular-v15/package.json
+++ b/packages/create-analog/template-angular-v15/package.json
@@ -24,7 +24,7 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/platform-server": "^15.0.0",
     "@angular/router": "^15.0.0",
-    "@nrwl/angular": "~15.4.0",
+    "@nrwl/angular": "^15.7.0",
     "rxjs": "~7.5.6",
     "tslib": "^2.4.0",
     "zone.js": "~0.11.8"
@@ -34,7 +34,8 @@
     "@angular-devkit/build-angular": "^15.0.0",
     "@angular/cli": "~15.0.0",
     "@angular/compiler-cli": "^15.0.0",
-    "@nrwl/vite": "~15.4.0",
+    "@nrwl/vite": "^15.7.0",
+    "nx": "^15.7.0",
     "jsdom": "^20.0.0",
     "typescript": "~4.8.4",
     "vite": "^4.0.3",
