--- a/apps/blog-app/tsconfig.app.json
+++ b/apps/blog-app/tsconfig.app.json
@@ -7,6 +7,10 @@
     "useDefineForClassFields": false
   },
   "files": ["src/main.ts", "src/main.server.ts"],
-  "include": ["src/**/*.d.ts", "src/app/routes/**/*.ts"],
+  "include": [
+    "src/**/*.d.ts",
+    "src/app/routes/**/*.ts",
+    "src/app/pages/**/*.page.ts"
+  ],
   "exclude": ["jest.config.ts", "src/**/*.test.ts", "src/**/*.spec.ts"]
 }
