--- a/packages/router/package.json
+++ b/packages/router/package.json
@@ -19,8 +19,8 @@
     "url": "https://github.com/analogjs/analog.git"
   },
   "peerDependencies": {
-    "@angular/core": "^14.0.0 || ^15.0.0",
-    "@angular/router": "^14.0.0 || ^15.0.0"
+    "@angular/core": "^15.0.0 || ^16.0.0-next.0",
+    "@angular/router": "^15.0.0 || ^16.0.0-next.0"
   },
   "optionalDependencies": {
     "@analogjs/content": "latest"
