--- a/apps/blog-app/project.json
+++ b/apps/blog-app/project.json
@@ -11,7 +11,7 @@
         "{options.outputPath}",
         "dist/apps/blog-app/.nitro",
         "dist/apps/blog-app/ssr",
-        "dist/apps/blog-app/server"
+        "dist/apps/blog-app/analog"
       ],
       "options": {
         "configFile": "apps/blog-app/vite.config.ts",
@@ -43,6 +43,15 @@
         "production": {
           "buildTarget": "blog-app:build:production"
         }
+      }
+    },
+    "serve-nitro": {
+      "executor": "@nrwl/web:file-server",
+      "options": {
+        "buildTarget": "blog-app:build",
+        "parallel": true,
+        "port": 3000,
+        "staticFilePath": "dist/apps/blog-app/analog/public"
       }
     }
   },
