--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@nrwl/jest": "15.7.0",
     "@nrwl/linter": "15.7.0",
     "@nrwl/vite": "15.7.0",
+    "@nrwl/web": "15.7.0",
     "@nrwl/workspace": "15.7.0",
     "@nx-plus/docusaurus": "15.0.0-rc.0",
     "@schematics/angular": "~15.1.3",
