--- a/package.json
+++ b/package.json
@@ -40,11 +40,11 @@
     "@angular/animations": "15.1.2",
     "@angular/common": "15.1.2",
     "@angular/compiler": "15.1.2",
-    "@angular/core": "15.1.2",
+    "@angular/core": "16.0.0-next.3",
     "@angular/forms": "15.1.2",
-    "@angular/platform-browser": "15.1.2",
-    "@angular/platform-browser-dynamic": "15.1.2",
-    "@angular/platform-server": "15.1.2",
+    "@angular/platform-browser": "16.0.0-next.3",
+    "@angular/platform-browser-dynamic": "16.0.0-next.3",
+    "@angular/platform-server": "16.0.0-next.3",
     "@angular/router": "15.1.2",
     "@astrojs/react": "^2.0.2",
     "@nrwl/angular": "15.7.0",
