--- a/package.json
+++ b/package.json
@@ -74,14 +74,20 @@
     "@ngtools/webpack": "~15.1.3",
     "@nrwl/cli": "15.7.0",
     "@nrwl/cypress": "15.7.0",
+    "@nrwl/devkit": "15.7.0",
     "@nrwl/eslint-plugin-nx": "15.7.0",
     "@nrwl/jest": "15.7.0",
+    "@nrwl/js": "15.7.0",
     "@nrwl/linter": "15.7.0",
+    "@nrwl/nx-plugin": "15.7.0",
     "@nrwl/vite": "15.7.0",
     "@nrwl/web": "15.7.0",
     "@nrwl/workspace": "15.7.0",
     "@nx-plus/docusaurus": "15.0.0-rc.0",
     "@schematics/angular": "~15.1.3",
+    "@swc-node/register": "^1.4.2",
+    "@swc/cli": "~0.1.55",
+    "@swc/core": "^1.2.173",
     "@swc/helpers": "^0.4.14",
     "@types/jest": "29.4.0",
     "@types/marked": "^4.0.8",
@@ -99,7 +105,9 @@
     "eslint-config-prettier": "8.6.0",
     "eslint-plugin-cypress": "^2.12.1",
     "jest": "29.4.1",
+    "jest-environment-jsdom": "28.1.1",
     "jsdom": "^21.1.0",
+    "jsonc-eslint-parser": "^2.1.0",
     "kolorist": "^1.6.0",
     "lint-staged": "^13.1.0",
     "minimist": "^1.2.7",
