--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,6 +17,7 @@
     "paths": {
       "@analogjs/astro-angular": ["packages/astro-angular/src/index.ts"],
       "@analogjs/content": ["packages/content/src/index.ts"],
+      "@analogjs/nx": ["packages/nx-plugin/src/index.ts"],
       "@analogjs/platform": ["packages/platform/src/index.ts"],
       "@analogjs/router": ["packages/router/src/index.ts"],
       "@analogjs/top-bar": ["libs/top-bar/src/index.ts"],
