feat(platform): remove executors, add schematics, improve usage of normalized options/ versions

--- a/packages/nx-plugin/package.json
+++ b/packages/nx-plugin/package.json
@@ -3,5 +3,5 @@
   "version": "0.0.1-alpha.0",
   "main": "src/index.js",
   "generators": "./generators.json",
-  "executors": "./executors.json"
+  "schematics": "./generators.json"
 }
