feat(platform): allow nx-plugin to be packaged with @analogjs/platform
the nx plugin can now be packaged as part of @analogjs/platform
to package the two run: nx run platform:package. also addressed
the suggested changes in the previous PR. e2e tests were also
adjusted because they stopped passing. there should be a
follow-up PR that improves those tests and makes sure we can
build those applications. (need to investigate e2e testing for
nx projects, specifically when it comes to sharing
node_module imports)

--- a/apps/nx-plugin-e2e/project.json
+++ b/apps/nx-plugin-e2e/project.json
@@ -7,12 +7,12 @@
     "e2e": {
       "executor": "@nrwl/nx-plugin:e2e",
       "options": {
-        "target": "nx-plugin:build",
+        "target": "platform:package",
         "jestConfig": "apps/nx-plugin-e2e/jest.config.ts",
         "coverageDirectory": "../../coverage/apps/nx-plugin-e2e"
       }
     }
   },
   "tags": [],
-  "implicitDependencies": ["nx-plugin"]
+  "implicitDependencies": ["platform"]
 }
