--- a/packages/nx-plugin/package.json
+++ b/packages/nx-plugin/package.json
@@ -1,7 +1,5 @@
 {
   "name": "@analogjs/nx",
-  "version": "0.0.1-alpha.0",
-  "main": "src/index.js",
-  "generators": "./generators.json",
-  "schematics": "./generators.json"
+  "version": "0.0.1",
+  "main": "src/index.js"
 }
