--- a/packages/platform/tsconfig.lib.json
+++ b/packages/platform/tsconfig.lib.json
@@ -6,7 +6,12 @@
     "inlineSourceMap": true,
     "sourceMap": false,
     "declaration": true,
-    "types": []
+    "types": [],
+    "paths": {
+      "@analogjs/vite-plugin-angular": [
+        "./node_modules/@analogjs/vite-plugin-angular"
+      ]
+    }
   },
   "include": ["**/*.ts"],
   "exclude": [
