feat(platform): allow nx-plugin to be packaged with @analogjs/platform (#313)

--- a/packages/platform/project.json
+++ b/packages/platform/project.json
@@ -4,7 +4,7 @@
   "sourceRoot": "packages/platform/src",
   "projectType": "library",
   "targets": {
-    "build": {
+    "build-package": {
       "executor": "@nrwl/js:tsc",
       "outputs": ["{options.outputPath}"],
       "options": {
@@ -27,6 +27,16 @@
       },
       "defaultConfiguration": "production"
     },
+    "build": {
+      "executor": "nx:run-commands",
+      "options": {
+        "commands": [
+          "yarn nx build-package platform",
+          "yarn nx build nx-plugin"
+        ],
+        "parallel": false
+      }
+    },
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "outputs": ["{options.outputFile}"],
@@ -39,5 +49,6 @@
       "executor": "@nrwl/vite:test"
     }
   },
-  "tags": []
+  "tags": [],
+  "implicitDependencies": ["vite-plugin-angular"]
 }
