--- a/package.json
+++ b/package.json
@@ -37,59 +37,59 @@
   ],
   "dependencies": {
     "@analogjs/content": "*",
-    "@angular/animations": "15.1.2",
-    "@angular/common": "15.1.2",
-    "@angular/compiler": "15.1.2",
-    "@angular/core": "15.1.2",
-    "@angular/forms": "15.1.2",
-    "@angular/platform-browser": "15.1.2",
-    "@angular/platform-browser-dynamic": "15.1.2",
-    "@angular/platform-server": "15.1.2",
-    "@angular/router": "15.1.2",
+    "@angular/animations": "15.2.5",
+    "@angular/common": "15.2.5",
+    "@angular/compiler": "15.2.5",
+    "@angular/core": "15.2.5",
+    "@angular/forms": "15.2.5",
+    "@angular/platform-browser": "15.2.5",
+    "@angular/platform-browser-dynamic": "15.2.5",
+    "@angular/platform-server": "15.2.5",
+    "@angular/router": "15.2.5",
     "@astrojs/react": "^2.0.2",
-    "@nrwl/angular": "15.7.0",
+    "@nrwl/angular": "15.9.2",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "front-matter": "^4.0.2",
     "marked": "^4.2.12",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "rxjs": "7.5.7",
+    "rxjs": "7.8.0",
     "tslib": "^2.4.0",
-    "zone.js": "~0.11.8"
+    "zone.js": "0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "15.1.3",
-    "@angular-devkit/core": "~15.1.3",
-    "@angular-devkit/schematics": "~15.1.3",
+    "@angular-devkit/build-angular": "15.2.5",
+    "@angular-devkit/core": "15.2.5",
+    "@angular-devkit/schematics": "15.2.5",
     "@angular-eslint/eslint-plugin": "15.2.0",
     "@angular-eslint/eslint-plugin-template": "15.2.0",
     "@angular-eslint/template-parser": "15.2.0",
-    "@angular/cli": "~15.1.3",
-    "@angular/compiler-cli": "15.1.2",
-    "@angular/language-service": "15.1.2",
+    "@angular/cli": "~15.2.0",
+    "@angular/compiler-cli": "15.2.5",
+    "@angular/language-service": "15.2.5",
     "@astrojs/markdown-component": "^1.0.2",
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
     "@ngtools/webpack": "~15.1.3",
-    "@nrwl/cli": "15.7.0",
-    "@nrwl/cypress": "15.7.0",
-    "@nrwl/devkit": "15.7.0",
-    "@nrwl/eslint-plugin-nx": "15.7.0",
-    "@nrwl/jest": "15.7.0",
-    "@nrwl/js": "15.7.0",
-    "@nrwl/linter": "15.7.0",
-    "@nrwl/nx-plugin": "15.7.0",
-    "@nrwl/vite": "15.7.0",
-    "@nrwl/web": "15.7.0",
-    "@nrwl/workspace": "15.7.0",
+    "@nrwl/cli": "15.9.2",
+    "@nrwl/cypress": "15.9.2",
+    "@nrwl/devkit": "15.9.2",
+    "@nrwl/eslint-plugin-nx": "15.9.2",
+    "@nrwl/jest": "15.9.2",
+    "@nrwl/js": "15.9.2",
+    "@nrwl/linter": "15.9.2",
+    "@nrwl/nx-plugin": "15.9.2",
+    "@nrwl/vite": "15.9.2",
+    "@nrwl/web": "15.9.2",
+    "@nrwl/workspace": "15.9.2",
     "@nx-plus/docusaurus": "15.0.0-rc.0",
-    "@schematics/angular": "~15.1.3",
+    "@schematics/angular": "15.2.5",
     "@swc-node/register": "^1.4.2",
     "@swc/cli": "~0.1.55",
     "@swc/core": "^1.2.173",
     "@swc/helpers": "^0.4.14",
-    "@types/jest": "29.4.0",
+    "@types/jest": "29.4.4",
     "@types/marked": "^4.0.8",
     "@types/node": "18.11.18",
     "@types/prismjs": "^1.26.0",
@@ -104,16 +104,16 @@
     "eslint": "~8.33.0",
     "eslint-config-prettier": "8.6.0",
     "eslint-plugin-cypress": "^2.12.1",
-    "jest": "29.4.1",
-    "jest-environment-jsdom": "28.1.1",
+    "jest": "29.4.3",
+    "jest-environment-jsdom": "29.4.3",
     "jsdom": "^21.1.0",
     "jsonc-eslint-parser": "^2.1.0",
     "kolorist": "^1.6.0",
     "lint-staged": "^13.1.0",
     "minimist": "^1.2.7",
-    "ng-packagr": "~15.1.1",
+    "ng-packagr": "15.2.2",
     "nitropack": "^1.0.0",
-    "nx": "15.7.0",
+    "nx": "15.9.2",
     "playwright": "^1.30.0",
     "postcss": "^8.4.21",
     "postcss-import": "~15.1.0",
