feat: upgrade dependencies to the latest Angular v16.0.0-next.7 release

--- a/apps/astro-app/tsconfig.app.json
+++ b/apps/astro-app/tsconfig.app.json
@@ -20,7 +20,8 @@
     "target": "es2020",
     "module": "es2020",
     "lib": ["es2020", "dom"],
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "ignoreDeprecations": "5.0"
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
