--- a/packages/content/project.json
+++ b/packages/content/project.json
@@ -7,11 +7,10 @@
   "implicitDependencies": ["vite-plugin-angular"],
   "targets": {
     "build": {
-      "executor": "@nrwl/angular:package",
+      "executor": "@angular-devkit/build-angular:ng-packagr",
       "outputs": ["node_modules/@analogjs/content"],
       "options": {
-        "project": "packages/content/ng-package.json",
-        "updateBuildableProjectDepsInPackageJson": false
+        "project": "packages/content/ng-package.json"
       },
       "configurations": {
         "production": {
