--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "dev": "nx serve",
     "ng": "nx",
-    "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2020 browser module main",
     "prepare": "git config core.hookspath .githooks",
     "start": "nx serve",
     "build": "nx run-many --target build --all",
@@ -36,42 +35,43 @@
     "apps/docs-app"
   ],
   "dependencies": {
-    "@analogjs/content": "*",
-    "@angular/animations": "15.2.5",
-    "@angular/common": "15.2.5",
-    "@angular/compiler": "15.2.5",
-    "@angular/core": "15.2.5",
-    "@angular/forms": "15.2.5",
-    "@angular/platform-browser": "15.2.5",
-    "@angular/platform-browser-dynamic": "15.2.5",
-    "@angular/platform-server": "15.2.5",
-    "@angular/router": "15.2.5",
+    "@analogjs/content": "latest",
+    "@angular/animations": "^16.0.0-next.7",
+    "@angular/common": "^16.0.0-next.7",
+    "@angular/compiler": "^16.0.0-next.7",
+    "@angular/core": "^16.0.0-next.7",
+    "@angular/forms": "^16.0.0-next.7",
+    "@angular/platform-browser": "^16.0.0-next.7",
+    "@angular/platform-browser-dynamic": "^16.0.0-next.7",
+    "@angular/platform-server": "^16.0.0-next.7",
+    "@angular/router": "^16.0.0-next.7",
     "@astrojs/react": "^2.0.2",
     "@nrwl/angular": "15.9.2",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "ajv-formats": "^2.1.1",
     "front-matter": "^4.0.2",
     "marked": "^4.2.12",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "rxjs": "7.8.0",
     "tslib": "^2.4.0",
-    "zone.js": "0.12.0"
+    "zone.js": "0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "15.2.5",
-    "@angular-devkit/core": "15.2.5",
-    "@angular-devkit/schematics": "15.2.5",
+    "@angular-devkit/build-angular": "^16.0.0-next.7",
+    "@angular-devkit/core": "^16.0.0-next.7",
+    "@angular-devkit/schematics": "^16.0.0-next.7",
     "@angular-eslint/eslint-plugin": "15.2.0",
     "@angular-eslint/eslint-plugin-template": "15.2.0",
     "@angular-eslint/template-parser": "15.2.0",
-    "@angular/cli": "~15.2.0",
-    "@angular/compiler-cli": "15.2.5",
-    "@angular/language-service": "15.2.5",
+    "@angular/cli": "^16.0.0-next.7",
+    "@angular/compiler-cli": "^16.0.0-next.7",
+    "@angular/language-service": "^16.0.0-next.7",
     "@astrojs/markdown-component": "^1.0.2",
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
-    "@ngtools/webpack": "~15.1.3",
+    "@ngtools/webpack": "^16.0.0-next.7",
     "@nrwl/cli": "15.9.2",
     "@nrwl/cypress": "15.9.2",
     "@nrwl/devkit": "15.9.2",
@@ -84,7 +84,7 @@
     "@nrwl/web": "15.9.2",
     "@nrwl/workspace": "15.9.2",
     "@nx-plus/docusaurus": "15.0.0-rc.0",
-    "@schematics/angular": "15.2.5",
+    "@schematics/angular": "^16.0.0-next.7",
     "@swc-node/register": "^1.4.2",
     "@swc/cli": "~0.1.55",
     "@swc/core": "^1.2.173",
@@ -111,7 +111,7 @@
     "kolorist": "^1.6.0",
     "lint-staged": "^13.1.0",
     "minimist": "^1.2.7",
-    "ng-packagr": "15.2.2",
+    "ng-packagr": "^16.0.0-next.0",
     "nitropack": "^1.0.0",
     "nx": "15.9.2",
     "playwright": "^1.30.0",
@@ -126,8 +126,8 @@
     "start-server-and-test": "^1.15.3",
     "ts-jest": "29.0.5",
     "ts-node": "10.9.1",
-    "typescript": "4.9.4",
-    "vite": "4.0.4",
+    "typescript": "5.0.3",
+    "vite": "4.2.1",
     "vite-tsconfig-paths": "4.0.5",
     "vitest": "0.25.8",
     "webpack-bundle-analyzer": "^4.7.0"
