--- a/packages/astro-angular/package.json
+++ b/packages/astro-angular/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@analogjs/astro-angular",
   "version": "0.1.0-beta.7",
-  "description": "An Angular integration for Astro",
+  "description": "Use Angular components within Astro",
   "type": "module",
   "author": "Brandon Roberts <robertsbt@gmail.com>",
   "exports": {
@@ -30,18 +30,18 @@
     "@analogjs/vite-plugin-angular": "latest"
   },
   "peerDependencies": {
-    "@angular-devkit/build-angular": "^15.0.0 || ^16.0.0-next.0",
-    "@angular/animations": "^15.0.0 || ^16.0.0-next.0",
-    "@angular/common": "^15.0.0 || ^16.0.0-next.0",
-    "@angular/compiler-cli": "^15.0.0 || ^16.0.0-next.0",
-    "@angular/compiler": "^15.0.0 || ^16.0.0-next.0",
-    "@angular/core": "^15.0.0 || ^16.0.0-next.0",
-    "@angular/language-service": "^15.0.0 || ^16.0.0-next.0",
-    "@angular/platform-browser": "^15.0.0 || ^16.0.0-next.0",
-    "@angular/platform-browser-dynamic": "^15.0.0 || ^16.0.0-next.0",
-    "@angular/platform-server": "^15.0.0 || ^16.0.0-next.0",
+    "@angular-devkit/build-angular": "^16.0.0-next.0",
+    "@angular/animations": "^16.0.0-next.0",
+    "@angular/common": "^16.0.0-next.0",
+    "@angular/compiler-cli": "^16.0.0-next.0",
+    "@angular/compiler": "^16.0.0-next.0",
+    "@angular/core": "^16.0.0-next.0",
+    "@angular/language-service": "^16.0.0-next.0",
+    "@angular/platform-browser": "^16.0.0-next.0",
+    "@angular/platform-browser-dynamic": "^16.0.0-next.0",
+    "@angular/platform-server": "^16.0.0-next.0",
     "rxjs": "^7.5.6",
-    "zone.js": "^0.11.0",
+    "zone.js": "^0.13.0",
     "tslib": "^2.4.0"
   }
 }
