build: update to Angular v16.0.0-rc.0 packages

--- a/package.json
+++ b/package.json
@@ -36,15 +36,15 @@
   ],
   "dependencies": {
     "@analogjs/content": "latest",
-    "@angular/animations": "^16.0.0-next.7",
-    "@angular/common": "^16.0.0-next.7",
-    "@angular/compiler": "^16.0.0-next.7",
-    "@angular/core": "^16.0.0-next.7",
-    "@angular/forms": "^16.0.0-next.7",
-    "@angular/platform-browser": "^16.0.0-next.7",
-    "@angular/platform-browser-dynamic": "^16.0.0-next.7",
-    "@angular/platform-server": "^16.0.0-next.7",
-    "@angular/router": "^16.0.0-next.7",
+    "@angular/animations": "^16.0.0-rc.0",
+    "@angular/common": "^16.0.0-rc.0",
+    "@angular/compiler": "^16.0.0-rc.0",
+    "@angular/core": "^16.0.0-rc.0",
+    "@angular/forms": "^16.0.0-rc.0",
+    "@angular/platform-browser": "^16.0.0-rc.0",
+    "@angular/platform-browser-dynamic": "^16.0.0-rc.0",
+    "@angular/platform-server": "^16.0.0-rc.0",
+    "@angular/router": "^16.0.0-rc.0",
     "@astrojs/react": "^2.0.2",
     "@nrwl/angular": "15.9.2",
     "@types/react": "^18.0.21",
@@ -59,19 +59,19 @@
     "zone.js": "0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.0.0-next.7",
-    "@angular-devkit/core": "^16.0.0-next.7",
-    "@angular-devkit/schematics": "^16.0.0-next.7",
+    "@angular-devkit/build-angular": "^16.0.0-rc.0",
+    "@angular-devkit/core": "^16.0.0-rc.0",
+    "@angular-devkit/schematics": "^16.0.0-rc.0",
     "@angular-eslint/eslint-plugin": "15.2.0",
     "@angular-eslint/eslint-plugin-template": "15.2.0",
     "@angular-eslint/template-parser": "15.2.0",
-    "@angular/cli": "^16.0.0-next.7",
-    "@angular/compiler-cli": "^16.0.0-next.7",
-    "@angular/language-service": "^16.0.0-next.7",
+    "@angular/cli": "^16.0.0-rc.0",
+    "@angular/compiler-cli": "^16.0.0-rc.0",
+    "@angular/language-service": "^16.0.0-rc.0",
     "@astrojs/markdown-component": "^1.0.2",
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
-    "@ngtools/webpack": "^16.0.0-next.7",
+    "@ngtools/webpack": "^16.0.0-rc.0",
     "@nrwl/cli": "15.9.2",
     "@nrwl/cypress": "15.9.2",
     "@nrwl/devkit": "15.9.2",
@@ -84,7 +84,7 @@
     "@nrwl/web": "15.9.2",
     "@nrwl/workspace": "15.9.2",
     "@nx-plus/docusaurus": "15.0.0-rc.0",
-    "@schematics/angular": "^16.0.0-next.7",
+    "@schematics/angular": "^16.0.0-rc.0",
     "@swc-node/register": "^1.4.2",
     "@swc/cli": "~0.1.55",
     "@swc/core": "^1.2.173",
@@ -111,7 +111,7 @@
     "kolorist": "^1.6.0",
     "lint-staged": "^13.1.0",
     "minimist": "^1.2.7",
-    "ng-packagr": "^16.0.0-next.0",
+    "ng-packagr": "^16.0.0-rc.0",
     "nitropack": "^1.0.0",
     "nx": "15.9.2",
     "playwright": "^1.30.0",
