--- a/packages/create-analog/template-angular-v16-prerelease/package.json
+++ b/packages/create-analog/template-angular-v16-prerelease/package.json
@@ -16,15 +16,15 @@
   "dependencies": {
     "@analogjs/content": "latest",
     "@analogjs/router": "latest",
-    "@angular/animations": "^16.0.0-next.0",
-    "@angular/common": "^16.0.0-next.0",
-    "@angular/compiler": "^16.0.0-next.0",
-    "@angular/core": "^16.0.0-next.0",
-    "@angular/forms": "^16.0.0-next.0",
-    "@angular/platform-browser": "^16.0.0-next.0",
-    "@angular/platform-browser-dynamic": "^16.0.0-next.0",
-    "@angular/platform-server": "^16.0.0-next.0",
-    "@angular/router": "^16.0.0-next.0",
+    "@angular/animations": "^16.0.0-rc.0",
+    "@angular/common": "^16.0.0-rc.0",
+    "@angular/compiler": "^16.0.0-rc.0",
+    "@angular/core": "^16.0.0-rc.0",
+    "@angular/forms": "^16.0.0-rc.0",
+    "@angular/platform-browser": "^16.0.0-rc.0",
+    "@angular/platform-browser-dynamic": "^16.0.0-rc.0",
+    "@angular/platform-server": "^16.0.0-rc.0",
+    "@angular/router": "^16.0.0-rc.0",
     "@nrwl/angular": "^15.7.0",
     "front-matter": "^4.0.2",
     "marked": "^4.2.12",
@@ -35,9 +35,9 @@
   },
   "devDependencies": {
     "@analogjs/platform": "latest",
-    "@angular-devkit/build-angular": "^16.0.0-next.0",
-    "@angular/cli": "~16.0.0-next.0",
-    "@angular/compiler-cli": "^16.0.0-next.0",
+    "@angular-devkit/build-angular": "^16.0.0-rc.0",
+    "@angular/cli": "~16.0.0-rc.0",
+    "@angular/compiler-cli": "^16.0.0-rc.0",
     "@nrwl/vite": "^15.7.0",
     "nx": "^15.7.0",
     "jsdom": "^20.0.0",
