--- a/packages/content/package.json
+++ b/packages/content/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@analogjs/content",
-  "version": "0.1.9",
+  "version": "0.2.0-beta.0",
   "description": "Content Rendering for Analog",
   "author": "Brandon Roberts <robertsbt@gmail.com>",
   "keywords": [
