feat: move nitro integration into separate vite plugin package

--- a/packages/platform/project.json
+++ b/packages/platform/project.json
@@ -11,10 +11,7 @@
         "outputPath": "node_modules/@analogjs/platform",
         "main": "packages/platform/src/index.ts",
         "tsConfig": "packages/platform/tsconfig.lib.json",
-        "assets": [
-          "packages/platform/*.md",
-          "packages/platform/src/lib/runtime/*.js"
-        ],
+        "assets": ["packages/platform/*.md"],
         "updateBuildableProjectDepsInPackageJson": false
       },
       "configurations": {
@@ -50,5 +47,5 @@
     }
   },
   "tags": [],
-  "implicitDependencies": ["vite-plugin-angular"]
+  "implicitDependencies": ["vite-plugin-angular", "vite-plugin-nitro"]
 }
