--- a/package.json
+++ b/package.json
@@ -128,8 +128,9 @@
     "ts-node": "10.9.1",
     "typescript": "5.0.3",
     "vite": "4.2.1",
+    "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "4.0.5",
-    "vitest": "0.25.8",
+    "vitest": "0.30.1",
     "webpack-bundle-analyzer": "^4.7.0"
   }
 }
