chore: update package.json versions to align with latest release

--- a/packages/vite-plugin-angular/package.json
+++ b/packages/vite-plugin-angular/package.json
@@ -19,6 +19,6 @@
     "url": "https://github.com/analogjs/analog.git"
   },
   "peerDependencies": {
-    "@angular-devkit/build-angular": "^15.0.0 || ^16.0.0-next.0"
+    "@angular-devkit/build-angular": "^15.0.0 || ^16.0.0-rc.0"
   }
 }
