--- a/packages/astro-angular/package.json
+++ b/packages/astro-angular/package.json
@@ -27,19 +27,19 @@
     "url": "https://github.com/analogjs/analog.git"
   },
   "dependencies": {
-    "@analogjs/vite-plugin-angular": "latest"
+    "@analogjs/vite-plugin-angular": "^0.2.0-beta.0"
   },
   "peerDependencies": {
-    "@angular-devkit/build-angular": "^16.0.0-next.0",
-    "@angular/animations": "^16.0.0-next.0",
-    "@angular/common": "^16.0.0-next.0",
-    "@angular/compiler-cli": "^16.0.0-next.0",
-    "@angular/compiler": "^16.0.0-next.0",
-    "@angular/core": "^16.0.0-next.0",
-    "@angular/language-service": "^16.0.0-next.0",
-    "@angular/platform-browser": "^16.0.0-next.0",
-    "@angular/platform-browser-dynamic": "^16.0.0-next.0",
-    "@angular/platform-server": "^16.0.0-next.0",
+    "@angular-devkit/build-angular": "^16.0.0-rc.0",
+    "@angular/animations": "^16.0.0-rc.0",
+    "@angular/common": "^16.0.0-rc.0",
+    "@angular/compiler-cli": "^16.0.0-rc.0",
+    "@angular/compiler": "^16.0.0-rc.0",
+    "@angular/core": "^16.0.0-rc.0",
+    "@angular/language-service": "^16.0.0-rc.0",
+    "@angular/platform-browser": "^16.0.0-rc.0",
+    "@angular/platform-browser-dynamic": "^16.0.0-rc.0",
+    "@angular/platform-server": "^16.0.0-rc.0",
     "rxjs": "^7.5.6",
     "zone.js": "^0.13.0",
     "tslib": "^2.4.0"
