--- a/packages/content/package.json
+++ b/packages/content/package.json
@@ -18,10 +18,10 @@
     "url": "https://github.com/analogjs/analog.git"
   },
   "peerDependencies": {
-    "@angular/common": "^15.0.0 || ^16.0.0-next.0",
-    "@angular/core": "^15.0.0 || ^16.0.0-next.0",
-    "@angular/platform-browser": "^15.0.0 || ^16.0.0-next.0",
-    "@angular/router": "^15.0.0 || ^16.0.0-next.0",
+    "@angular/common": "^15.0.0 || ^16.0.0-rc.0",
+    "@angular/core": "^15.0.0 || ^16.0.0-rc.0",
+    "@angular/platform-browser": "^15.0.0 || ^16.0.0-rc.0",
+    "@angular/router": "^15.0.0 || ^16.0.0-rc.0",
     "rxjs": "^6.5.0 || ^7.5.0",
     "marked": "^4.2.4",
     "prismjs": "^1.29.0",
