--- a/packages/platform/package.json
+++ b/packages/platform/package.json
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "nitropack": "^1.0.0",
-    "@analogjs/vite-plugin-angular": "latest"
+    "@analogjs/vite-plugin-angular": "^0.2.0-beta.0"
   },
   "generators": "./src/lib/nx-plugin/generators.json",
   "schematics": "./src/lib/nx-plugin/generators.json"
