--- a/packages/router/package.json
+++ b/packages/router/package.json
@@ -19,11 +19,11 @@
     "url": "https://github.com/analogjs/analog.git"
   },
   "peerDependencies": {
-    "@angular/core": "^15.0.0 || ^16.0.0-next.0",
-    "@angular/router": "^15.0.0 || ^16.0.0-next.0"
+    "@angular/core": "^15.0.0 || ^16.0.0-rc.0",
+    "@angular/router": "^15.0.0 || ^16.0.0-rc.0"
   },
   "optionalDependencies": {
-    "@analogjs/content": "latest"
+    "@analogjs/content": "^0.2.0-beta.0"
   },
   "dependencies": {
     "tslib": "^2.0.0"
