--- a/packages/create-analog/template-angular-v15/package.json
+++ b/packages/create-analog/template-angular-v15/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@analogjs/platform": "0.1.0-beta.22",
+    "@analogjs/vite-plugin-angular": "0.2.0-alpha.22",
     "@angular-devkit/build-angular": "^15.0.0",
     "@angular/cli": "~15.0.0",
     "@angular/compiler-cli": "^15.0.0",
