--- a/packages/create-analog/template-angular-v15/package.json
+++ b/packages/create-analog/template-angular-v15/package.json
@@ -26,6 +26,9 @@
     "@angular/platform-server": "^15.0.0",
     "@angular/router": "^15.0.0",
     "@nrwl/angular": "^15.7.0",
+    "front-matter": "^4.0.2",
+    "marked": "^4.2.12",
+    "prismjs": "^1.29.0",
     "rxjs": "~7.5.6",
     "tslib": "^2.4.0",
     "zone.js": "~0.11.8"
