--- a/packages/platform/package.json
+++ b/packages/platform/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@analogjs/platform",
-  "version": "0.2.0-beta.1",
+  "version": "0.2.0-beta.2",
   "type": "commonjs",
   "description": "The fullstack meta-framework for Angular",
   "author": "Brandon Roberts <robertsbt@gmail.com>",
@@ -25,8 +25,8 @@
   },
   "dependencies": {
     "nitropack": "^1.0.0",
-    "@analogjs/vite-plugin-angular": "^0.2.0-beta.1",
-    "@analogjs/vite-plugin-nitro": "latest"
+    "@analogjs/vite-plugin-angular": "^0.2.0-beta.2",
+    "@analogjs/vite-plugin-nitro": "^0.2.0-beta.2"
   },
   "generators": "./src/lib/nx-plugin/generators.json",
   "schematics": "./src/lib/nx-plugin/generators.json"
