--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "analogjs-platform",
-  "version": "0.0.0",
+  "version": "0.2.0-beta.3",
   "license": "MIT",
   "scripts": {
     "dev": "nx serve",
@@ -19,7 +19,8 @@
   "packageManager": "yarn@1.22.19",
   "keywords": [
     "vite-plugin",
-    "angular"
+    "angular",
+    "meta-framework"
   ],
   "author": "Brandon Roberts <robertsbt@gmail.com>",
   "bugs": {
