build: update to Nx 16.0.1

--- a/apps/analog-app-e2e-cypress/project.json
+++ b/apps/analog-app-e2e-cypress/project.json
@@ -5,7 +5,7 @@
   "projectType": "application",
   "targets": {
     "e2e": {
-      "executor": "@nrwl/cypress:cypress",
+      "executor": "@nx/cypress:cypress",
       "options": {
         "cypressConfig": "apps/analog-app-e2e-cypress/cypress.config.ts",
         "devServerTarget": "analog-app:serve",
@@ -19,7 +19,7 @@
       }
     },
     "lint": {
-      "executor": "@nrwl/linter:eslint",
+      "executor": "@nx/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": ["apps/analog-app-e2e-cypress/**/*.{js,ts}"]
