--- a/packages/create-analog/template-angular-v16-prerelease/package.json
+++ b/packages/create-analog/template-angular-v16-prerelease/package.json
@@ -25,7 +25,7 @@
     "@angular/platform-browser-dynamic": "^16.0.0-rc.0",
     "@angular/platform-server": "^16.0.0-rc.0",
     "@angular/router": "^16.0.0-rc.0",
-    "@nrwl/angular": "^15.7.0",
+    "@nx/angular": "16.0.1",
     "front-matter": "^4.0.2",
     "marked": "^4.2.12",
     "prismjs": "^1.29.0",
@@ -38,8 +38,8 @@
     "@angular-devkit/build-angular": "^16.0.0-rc.0",
     "@angular/cli": "~16.0.0-rc.0",
     "@angular/compiler-cli": "^16.0.0-rc.0",
-    "@nrwl/vite": "^15.7.0",
-    "nx": "^15.7.0",
+    "@nx/vite": "16.0.1",
+    "nx": "^16.0.1",
     "jsdom": "^20.0.0",
     "typescript": "~5.0.2",
     "vite": "^4.0.3",
