--- a/apps/blog-app-e2e-cypress/project.json
+++ b/apps/blog-app-e2e-cypress/project.json
@@ -5,7 +5,7 @@
   "projectType": "application",
   "targets": {
     "e2e": {
-      "executor": "@nrwl/cypress:cypress",
+      "executor": "@nx/cypress:cypress",
       "options": {
         "cypressConfig": "apps/blog-app-e2e-cypress/cypress.config.ts",
         "devServerTarget": "blog-app:serve-nitro",
@@ -18,7 +18,7 @@
       }
     },
     "lint": {
-      "executor": "@nrwl/linter:eslint",
+      "executor": "@nx/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": ["apps/blog-app-e2e-cypress/**/*.{js,ts}"]
