--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@angular/platform-server": "^16.0.0-rc.2",
     "@angular/router": "^16.0.0-rc.2",
     "@astrojs/react": "^2.0.2",
-    "@nrwl/angular": "15.9.2",
+    "@nx/angular": "16.0.1",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "ajv-formats": "^2.1.1",
@@ -60,42 +60,41 @@
     "zone.js": "0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.0.0-rc.1",
-    "@angular-devkit/core": "^16.0.0-rc.1",
-    "@angular-devkit/schematics": "^16.0.0-rc.1",
+    "@angular-devkit/build-angular": "^16.0.0-rc.4",
+    "@angular-devkit/core": "^16.0.0-rc.4",
+    "@angular-devkit/schematics": "^16.0.0-rc.4",
     "@angular-eslint/eslint-plugin": "15.2.0",
     "@angular-eslint/eslint-plugin-template": "15.2.0",
     "@angular-eslint/template-parser": "15.2.0",
-    "@angular/cli": "^16.0.0-rc.1",
+    "@angular/cli": "^16.0.0-rc.4",
     "@angular/compiler-cli": "^16.0.0-rc.2",
     "@angular/language-service": "^16.0.0-rc.2",
     "@astrojs/markdown-component": "^1.0.2",
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
     "@ngtools/webpack": "^16.0.0-rc.1",
-    "@nrwl/cli": "15.9.2",
-    "@nrwl/cypress": "15.9.2",
-    "@nrwl/devkit": "15.9.2",
-    "@nrwl/eslint-plugin-nx": "15.9.2",
-    "@nrwl/jest": "15.9.2",
-    "@nrwl/js": "15.9.2",
-    "@nrwl/linter": "15.9.2",
-    "@nrwl/nx-plugin": "15.9.2",
-    "@nrwl/vite": "15.9.2",
-    "@nrwl/web": "15.9.2",
-    "@nrwl/workspace": "15.9.2",
+    "@nx/devkit": "16.0.1",
+    "@nx/workspace": "16.0.1",
+    "@nx/js": "16.0.1",
+    "@nx/linter": "16.0.1",
+    "@nx/cypress": "16.0.1",
+    "@nx/web": "16.0.1",
+    "@nx/eslint-plugin": "16.0.1",
+    "@nx/vite": "16.0.1",
+    "@nx/plugin": "16.0.1",
+    "@nx/jest": "16.0.1",
     "@nx-plus/docusaurus": "15.0.0-rc.0",
     "@schematics/angular": "^16.0.0-rc.1",
     "@swc-node/register": "^1.4.2",
-    "@swc/cli": "~0.1.55",
+    "@swc/cli": "0.1.62",
     "@swc/core": "^1.2.173",
-    "@swc/helpers": "^0.4.14",
+    "@swc/helpers": "0.5.1",
     "@types/jest": "29.4.4",
     "@types/marked": "^4.0.8",
     "@types/node": "18.11.18",
     "@types/prismjs": "^1.26.0",
-    "@typescript-eslint/eslint-plugin": "^5.49.0",
-    "@typescript-eslint/parser": "^5.49.0",
+    "@typescript-eslint/eslint-plugin": "5.59.1",
+    "@typescript-eslint/parser": "5.59.1",
     "all-contributors-cli": "^6.24.0",
     "astro": "2.0.2",
     "conventional-changelog": "^3.1.25",
@@ -114,7 +113,7 @@
     "minimist": "^1.2.7",
     "ng-packagr": "^16.0.0-rc.1",
     "nitropack": "^1.0.0",
-    "nx": "15.9.2",
+    "nx": "16.0.1",
     "playwright": "^1.30.0",
     "postcss": "^8.4.21",
     "postcss-import": "~15.1.0",
@@ -125,7 +124,7 @@
     "prompts": "^2.4.2",
     "rollup-plugin-visualizer": "^5.9.0",
     "start-server-and-test": "^1.15.3",
-    "ts-jest": "29.0.5",
+    "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
     "typescript": "5.0.3",
     "vite": "4.3.0",
