--- a/packages/create-analog/template-angular-v15/package.json
+++ b/packages/create-analog/template-angular-v15/package.json
@@ -25,7 +25,7 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/platform-server": "^15.0.0",
     "@angular/router": "^15.0.0",
-    "@nrwl/angular": "^15.7.0",
+    "@nx/angular": "16.0.1",
     "front-matter": "^4.0.2",
     "marked": "^4.2.12",
     "prismjs": "^1.29.0",
@@ -39,7 +39,7 @@
     "@angular-devkit/build-angular": "^15.0.0",
     "@angular/cli": "~15.0.0",
     "@angular/compiler-cli": "^15.0.0",
-    "@nrwl/vite": "^15.7.0",
+    "@nx/vite": "16.0.1",
     "nx": "^15.7.0",
     "jsdom": "^20.0.0",
     "typescript": "~4.8.4",
