--- a/packages/platform/project.json
+++ b/packages/platform/project.json
@@ -5,7 +5,7 @@
   "projectType": "library",
   "targets": {
     "build-package": {
-      "executor": "@nrwl/js:tsc",
+      "executor": "@nx/js:tsc",
       "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "node_modules/@analogjs/platform",
@@ -36,7 +36,7 @@
       }
     },
     "lint": {
-      "executor": "@nrwl/linter:eslint",
+      "executor": "@nx/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": ["packages/platform/**/*.ts"]
@@ -44,7 +44,7 @@
     },
     "test": {
       "dependsOn": ["^build"],
-      "executor": "@nrwl/vite:test"
+      "executor": "@nx/vite:test"
     }
   },
   "tags": [],
