feat: add support for JIT mode

--- a/nx.json
+++ b/nx.json
@@ -23,6 +23,9 @@
       "dependsOn": ["^build"],
       "inputs": ["production", "^production"]
     },
+    "test": {
+      "dependsOn": ["^build"]
+    },
     "serve": {
       "dependsOn": ["^build"]
     },
